# multiplayer

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs  menu.rs
logic_plugin/: Cargo.toml
logic_plugin/src/: attack.rs  lib.rs  movement.rs  physics.rs
logic_plugin/src/attack/: shoot.rs
logic_plugin/src/movement/: collisions.rs  velocity.rs
multiplayer_plugin/: Cargo.toml
multiplayer_plugin/src/: client.rs  server.rs
server/: Cargo.toml
server/src/: main.rs  network.rs
shared/: Cargo.toml
shared/src/: lib.rs  network.rs
shared/src/network/: com_client.rs  com_server.rs  udp_client.rs  udp_server.rs
