[package]
name = "client"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.5"
shared = { path = "../shared" }
multiplayer_plugin = { path = "../multiplayer_plugin" }
bevy_egui = "*"