[package]
name = "logic_plugin"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2018"

[lib]
name = "logic_plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared = { path = "../shared" }
bevy = "0.5"
rapier2d = "*"
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", branch = "master" }
# FIXME: this is visualizer and should not be in logic (or as a feature)
bevy_prototype_debug_lines = "*"
