[package]
name = "multiplayer_plugin"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2018"

[lib]
name = "multiplayer_plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared = { path = "../shared" }
bevy = "0.5"
